--- a/index.html
+++ b/index.html
@@ -5,21 +5,21 @@
     <title>Dogs</title>
 </head>
 <body>
-<div style="width:80%">
+<div style="width:80%;margin-left:10%">
     <h1 style="text-align:center">
         My first website using git ,gitdesktop & github.
     </h1>
-    <div style="width:25%;background-color:red;">
+    <div style="width:30%;background-color:red;float:left;">
         <h3>
             left
         </h3>
     </div>
-    <div style="width:25%;background-color:blue;">
+    <div style="width:35%;background-color:blue;float:left">
         <h3>
             center
         </h3>
     </div>
-    <div style="width:25%;background-color:green;">
+    <div style="width:35%;background-color:green;float:left">
         <h3>
             right
         </h3>
